# glsl_extractor

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: cmake-single-platform.yml  ubuntu-build.yml
cmake/: ExternalAntlr4Cpp.cmake  FindANTLR.cmake
include/: GLSLExtractor.hpp
samples/: simple.fsh
src/: GLSLExporterVisitor.cpp  GLSLExporterVisitor.hpp  GLSLExtractor.cpp  main.cpp
